@@ -4,6 +4,8 @@ Development Progress	:
 ---------------------------
 
 2010-12-17 (CVS):
+    * libs/timidity/instrum_dls.c (LoadRIFF, AllocRegions, AllocInstruments,
+      AllocWaveList): Replaced all malloc() usage by safe_malloc().
     * libs/timidity/instrum.c,instrum_dls.c,instrum.h,timidity.c,timidity.h,
       common.c,common.h: Const correctness on char* pointers. Fixed "pointer
       targets in assignment differ in signedness" warnings in instrum_dls.c.
